crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__member_access-2.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"foo.bar();\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 10,
                    },
                },
                span: 0..10,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 0..9,
                        kind: App(
                            App {
                                lam: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                    span: 0..7,
                                    kind: Member(
                                        Member {
                                            obj: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 3,
                                                    },
                                                },
                                                span: 0..3,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 0,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 3,
                                                            },
                                                        },
                                                        span: 0..3,
                                                        name: "foo",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            prop: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 4,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 7,
                                                        },
                                                    },
                                                    span: 4..7,
                                                    name: "bar",
                                                },
                                            ),
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                args: [],
                                type_args: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
